# game-emulator

./: .gitignore  README.md  pubspec.yaml
android/: .gitignore  build.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  emulator_loop_android.cpp  game_texture_android.cpp
ios/Runner/: AppDelegate.swift  EmulatorLoop.mm  GameAudioEngine.mm  GameTextureBridge.mm  GameTexturePlugin.swift  Info.plist  Runner-Bridging-Header.h  embed_libretro_cores.sh
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Frameworks/: fceumm_libretro_ios.dylib  mgba_libretro_ios.dylib
lib/: main.dart
lib/core/audio/: audio_debug.dart  audio_output_service.dart
lib/core/emulator_loop/: emulator_loop_ffi.dart
lib/core/game_texture/: game_texture_bindings.dart  game_texture_controller.dart
lib/core/haptics/: haptic_service.dart
lib/core/libretro/: emulator_core_resolver.dart  emulator_service.dart  libretro_bindings.dart  libretro_core.dart  thumbnail_generator.dart  video_renderer.dart
lib/core/network/: lan_service.dart
lib/core/settings/: app_settings_service.dart
lib/core/storage/: storage_paths_service.dart
lib/features/game_library/: game_library_service.dart
lib/presentation/gamepad/: gamepad_layout.dart  (+1 more)
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
scripts/: build_all_cores.sh  build_fceumm_libretro.sh  build_mgba_libretro.sh
shaders/: gba_display.frag
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+22 files in other folders)
